Add UI for the rps game

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="rps.js"></script>
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class = images>
+    </div>
+    <div class="buttons">
+        <button class="rock">Rock</button>
+        <button class="scissors">Scissors</button>
+        <button class="paper">Paper</button>
+    </div>
+    <div>
+        <h1 class = "no_margin">Are you ready to Rumble"?</h1>
+    </div>
+    <div class = player_vs_computer>
+
+    </div>
+    <div class = names>
+        <h2>Player</h2>
+        <h2>Computer</h2>
+    </div>
+    <script src="rps.js"></script>
 </body>
 </html>
