Fix a spelling mistake

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="paper">Paper</button>
     </div>
     <div>
-        <h1 class = "no_margin">Are you ready to Rumble"?</h1>
+        <h1 class = "no_margin">Are you ready to Rumble?</h1>
     </div>
     <div class = player_vs_computer>
 
